--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,87 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
+Reproducible research project week 2
+=========
+# Code for reading in the dataset and/or processing the data
 
+## Reading file
+```{r}
+data <- read.csv("activity.csv")
+str(data)
+summary(data)
+head(data)
+```
 
-## Loading and preprocessing the data
+## Transforming column date to Date type
+```{r}
+data$date <- as.Date(as.character(data$date))
+```
 
+# Histogram of the total number of steps taken each day
+```{r}
+stepsDay <- with(data,tapply(steps,date,sum,na.rm=TRUE))
+hist(stepsDay, main = "Histogram activity",xlab = "Steps per Day", col = "red")
+```
 
+# Mean and median number of steps taken each day
+```{r}
+mean(stepsDay)
+median(stepsDay)
+```
 
-## What is mean total number of steps taken per day?
+# Time series plot of the average number of steps taken
+```{r}
+meanSteps <- with(data,tapply(steps,interval,mean,na.rm=TRUE))
+plot(meanSteps,main = "Daily average number of steps",type = "l",col="blue",
+     ylab = "Average number of steps",xlab = "5 min interval")
+```
 
+# The 5-minute interval that, on average, contains the maximum number of steps
+```{r}
+maxInterval <- data$interval[grep(max(meanSteps),meanSteps)]
+```
 
+# Code to describe and show a strategy for imputing missing data
+```{r}
+library(dplyr)
+meanInt <- function(x){replace(x, is.na(x), mean(x, na.rm = TRUE))}
+newData <- data %>% 
+  group_by(interval) %>%
+  mutate(steps = meanInt(steps))
+head(newData)
+```
 
-## What is the average daily activity pattern?
+# Histogram of the total number of steps taken each day after missing values are imputed
+```{r}
+stepsDayNew <- with(newData,tapply(steps,date,sum,na.rm=TRUE))
+hist(stepsDayNew, main = "Histogram activity",xlab = "Steps per Day", col = "red")
+```
 
+## New Mean and Median steps per day
+```{r}
+mean(stepsDayNew)
+median(stepsDayNew)
+```
 
+### Do these values differ from the estimates from the first part of the assignment? 
+YES  
 
-## Imputing missing values
+### What is the impact of imputing missing data on the estimates of the total daily number of steps?  
+The new histogram shows a normal distribution, new mean and new median have the same value
 
+### Are there differences in activity patterns between weekdays and weekends?
+```{r}
+newData$weekday <- weekdays(data$date)
+newData$weekcat <- ifelse(newData$weekday %in% c("Saturday","Sunday"),"Weekend","Weekday")
+```
 
-
-## Are there differences in activity patterns between weekdays and weekends?
+# Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
+```{r}
+stepsMean <- aggregate(newData$steps,by=list(newData$interval,newData$weekcat),mean)
+colnames(stepsMean) <- c("Interval","Weekcat","Stepsmean")
+str(stepsMean)
+library(ggplot2)
+ggplot(stepsMean,aes(Interval,Stepsmean,color=Weekcat)) +
+  geom_line() +
+  facet_grid(Weekcat~.) + 
+  labs(y="Average number of steps", x="5-minute interval") + 
+  theme(legend.position = "none")
+```
