--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -40,6 +40,8 @@ maxInterval <- data$interval[grep(max(meanSteps),meanSteps)]
 ```
 
 # Code to describe and show a strategy for imputing missing data
+
+We will create a function to fill the NA values with the mean value for each 5 minute interval
 ```{r}
 library(dplyr)
 meanInt <- function(x){replace(x, is.na(x), mean(x, na.rm = TRUE))}
